end game phrase

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <main class="my-bg-main">
         <div class="clearfix p-5">
-            <div id="my-play-ground"></div>
+            <div id="my-play-ground" class="mb-3"></div>
+
+            <h3 id="points-end" class="text-center"></h3>
         </div>
     </main>
 
